--- a/index.html
+++ b/index.html
@@ -32,25 +32,29 @@
 <body>
     <header class="container-fluid header">
         <div class="container-fluid pre-header d-flex justify-content-center">
-            <div class="container d-flex pre-content row">
+            <div class="container d-flex pre-content row p-0">
                 <div class="d-flex col-xl-10 col-md-9 p-0">
-                    <i class="bi bi-telephone"></i>
-                    <p class="info m-0"> <a class="" href="tel:+88121234567">8 (812) 123-45-67 &nbsp;</a>|&nbsp;
+                    <i class="bi bi-telephone telephone-icon"></i>
+                    <p class="info m-0 d-flex align-items-center">
+                        <a class="" href="tel:+88121234567">
+                            8 (812) 123-45-67
+                        </a>&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
                         Працюємо 7 днів на
-                        тиждень &nbsp; |&nbsp;
-                        9:00 — 18:00</p>
+                        тиждень&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
+                        9:00 — 18:00
+                    </p>
                 </div>
-                <div class="d-flex justify-content-center col-xl-2 col-md-3 p-0 login-wrap">
+                <div class="d-flex justify-content-end col-xl-2 col-md-3 p-0 login-wrap">
                     <i class="bi bi-box-arrow-in-right login-icon"></i>
                     <p class="login m-0">Вхід / Реєстрація</p>
                 </div>
             </div>
         </div>
 
-        <div class="container">
-            <div class="row colextions-wrapper m-0">
+        <div class="container-fluid colextions-wrapper">
+            <div class="row m-0">
                 <nav class="navbar navbar-expand-md">
-                    <a href="#" class="logo col-xl-6 col-lg-5 col-md-2 col-sm-3">
+                    <a href="#" class="logo col-xl-1 col-lg-5 col-md-2 col-sm-3">
                         <!-- PORTEN -->
                         <img src="./img/PORTEN.png" alt="logo" width="104">
                     </a>
@@ -60,14 +64,15 @@
                     </button>
                     <div class="collapse navbar-collapse col-xl-5 col-lg-3 col-md-9" id="collapsibleNavbar">
                         <ul
-                            class="navbar-nav col-xl-9 col-lg-9 col-md-8 col-sm-12 justify-content-xl-end justify-content-sm-center d-flex align-items-center">
+                            class="navbar-nav col-xl-10 col-lg-9 col-md-8 col-sm-12 justify-content-xl-start justify-content-sm-center d-flex align-items-center">
                             <li class="nav-item text-center"><a class="nav-link active" href="#">сподобалось</a>
                             </li>
                             <li class="nav-item text-center"><a class="nav-link" href="#">Особистий кабінет</a></li>
                             <li class="nav-item text-center"><a class="nav-link" href="#">налаштування</a></li>
                         </ul>
 
-                        <div class="container col-xl-3 col-lg-2 col-md-2 col-sm-12 p-0 d-flex justify-content-center">
+                        <div
+                            class="container col-xl-3 col-lg-2 col-md-2 col-sm-12 p-0 d-flex justify-content-center icons m-0">
                             <i class="col-xl-3 col-md-1 bi bi-cart2 align-self-center icon"></i>
                             <i class="col-xl-3 m-0 col-md-1 bi bi-search align-self-center icon"></i>
                         </div>
@@ -85,11 +90,11 @@
         <section class="hero">
             <div class="container-fluid row">
                 <div class="container hero-wraper">
-                    <h1 class="hero-title">
+                    <h1 class="hero-title m-0">
                         <!-- PORTEN -->
                         <img src="./img/PORTEN.png" alt="logo" width="185">
                     </h1>
-                    <p class="hero-city">івано-франківськ</p>
+                    <p class="hero-city m-0">івано-франківськ</p>
                 </div>
                 <div class="container-fluid row">
                     <p class="hero-text col-xl-5 col-lg-7 col-md-9 col-sm-12">В магазинах Торговельній мережі Porten ви
@@ -110,14 +115,14 @@
             </div>
         </section>
 
-        <div class="container-fluid">
-            <div class="row colextions-wrapper m-0">
-                <section class="container new-seson col-xl-7 col-lg-12 col-md-12 col-sm-12">
+        <section class="container-fluid">
+            <div class="row m-0">
+                <section class="container new-seson col-xl-7 col-lg-12 col-md-12 col-sm-12 px-0">
                     <h2 class="section-title m-0">СЕЗОН 2021/22</h2>
 
-                    <div class="container">
+                    <div class="container p-0">
                         <ul class="row new-seson-list-wrapper container d-flex justify-content-center m-0">
-                            <li class="new-seson-item col-xl-4 col-md-4 col-sm-6 mb-3">
+                            <li class="new-seson-item col-xl-4 col-md-4 col-sm-6 mb-0">
                                 <div class="new-seson-img-wraper m-0 d-flex justify-content-center">
                                     <img class="w-100" src="./img/new-clock1.png" alt="clock 1">
                                 </div>
@@ -125,7 +130,7 @@
                                 <p class="new-seson-item-price">13 600 грн.</p>
 
                             </li>
-                            <li class="new-seson-item col-lg-4 col-md-4 col-sm-6 mb-3">
+                            <li class="new-seson-item col-lg-4 col-md-4 col-sm-6 mb-0">
                                 <div class="new-seson-img-wraper m-0 d-flex justify-content-center">
                                     <img class="w-100" src="./img/new-clock2.png" alt="clock 1">
                                 </div>
@@ -145,23 +150,23 @@
                     </div>
                 </section>
 
-                <section class="container new-colection col-xl-5 col-lg-12 col-md-12 col-sm-12 pb-md-5">
-                    <div class="container new-colection-wraper">
+                <section class="container new-colection col-xl-5 col-lg-12 col-md-12 col-sm-12 pb-xl-0 pb-md-5">
+                    <div class="container new-colection-wraper pb-0">
                         <h2 class="section-title">Нова колекція</h2>
                         <a class="new-colection-link" href="#">Каталог</a>
                     </div>
                 </section>
             </div>
-        </div>
+        </section>
 
 
         <section class="container-fluid old-colection d-flex justify-content-center">
-            <div class="row colextions-wrapper m-0">
+            <div class="row m-0">
                 <img class="col-xl-6 col-md-12 col-sm-12 p-0" src="./img/old-colection-img.webp" alt="fashion man">
                 <div class="container old-colection-wraper col-xl-6 col-md-10 p-0">
                     <div class="row old-colection-text-wrap justify-content-center">
-                        <div class="row">
-                            <h2 class="section-title p-0">колекція 2018</h2>
+                        <div class="row p-0">
+                            <h2 class="section-title old-colection-title p-0">колекція 2018</h2>
                             <p class="old-colection-text p-md-0 p-sm-3 container">Годинники як інструмент
                                 визначення
                                 часу
@@ -383,10 +388,10 @@
             </div>
 
             <div class="container-fluid table-responsive-xl m-0 d-none d-sm-block">
-                <table class="table container mb-0">
+                <table class="table container mb-0 p-0">
                     <tbody class="container new-product-list">
                         <tr class="row justify-content-center">
-                            <td class="new-product col-sm-6 col-md-3">
+                            <td class="new-product col-sm-6 col-md-3 p-0">
                                 <div class="new-product-img-wrap d-flex justify-content-center">
                                     <img class="new-product-img" src="./img/new-clock2.png" alt="new-clock" width="215"
                                         height="234">
@@ -394,7 +399,7 @@
                                 <p class="new-seson-item-name">Carl von Zeyten</p>
                                 <p class="new-seson-item-price">16 500 грн.</p>
                             </td>
-                            <td class="new-product col-sm-6 col-md-3">
+                            <td class="new-product col-sm-6 col-md-3 p-0">
                                 <div class="new-product-img-wrap d-flex justify-content-center">
                                     <img class="new-product-img" src="./img/new-clock3.png" alt="new-clock" width="215"
                                         height="234">
@@ -402,7 +407,7 @@
                                 <p class="new-seson-item-name">JORD AR5905</p>
                                 <p class="new-seson-item-price">65 000 грн.</p>
                             </td>
-                            <td class="new-product col-sm-6 col-md-3">
+                            <td class="new-product col-sm-6 col-md-3 p-0">
                                 <div class="new-product-img-wrap d-flex justify-content-center">
                                     <img class="new-product-img" src="./img/new-clock4.png" alt="new-clock" width="215"
                                         height="234">
@@ -410,7 +415,7 @@
                                 <p class="new-seson-item-name">Emporio Armani Sportivo</p>
                                 <p class="new-seson-item-price">165 000 грн.</p>
                             </td>
-                            <td class="new-product col-sm-6 col-md-3">
+                            <td class="new-product col-sm-6 col-md-3 p-0">
                                 <div class="new-product-img-wrap d-flex justify-content-center">
                                     <img class="new-product-img" src="./img/new-clock5.png" alt="new-clock" width="215"
                                         height="234">
@@ -419,7 +424,7 @@
                                 <p class="new-seson-item-price">280 000 грн.</p>
                             </td>
 
-                            <td class="new-product col-sm-6 col-md-3">
+                            <td class="new-product col-sm-6 col-md-3 p-0">
                                 <div class="new-product-img-wrap d-flex justify-content-center">
                                     <img class="new-product-img" src="./img/new-clock1.png" alt="new-clock" width="215"
                                         height="234">
@@ -427,7 +432,7 @@
                                 <p class="new-seson-item-name">Louis XVI ATHOS</p>
                                 <p class="new-seson-item-price">65 000 грн.</p>
                             </td>
-                            <td class="new-product col-sm-6 col-md-3">
+                            <td class="new-product col-sm-6 col-md-3 p-0">
                                 <div class="new-product-img-wrap d-flex justify-content-center">
                                     <img class="new-product-img" src="./img/new-clock6.png" alt="new-clock" width="215"
                                         height="234">
@@ -435,7 +440,7 @@
                                 <p class="new-seson-item-name">U-Boat Italo Fontana</p>
                                 <p class="new-seson-item-price">18 700 грн.</p>
                             </td>
-                            <td class="new-product col-sm-6 col-md-3">
+                            <td class="new-product col-sm-6 col-md-3 p-0">
                                 <div class="new-product-img-wrap d-flex justify-content-center">
                                     <img class="new-product-img" src="./img/new-clock7.png" alt="new-clock" width="215"
                                         height="234">
@@ -443,7 +448,7 @@
                                 <p class="new-seson-item-name">Gucci Men's G</p>
                                 <p class="new-seson-item-price">38 500 грн.</p>
                             </td>
-                            <td class="new-product last-td col-sm-6 col-md-3">
+                            <td class="new-product last-td col-sm-6 col-md-3 p-0">
                                 <div class="new-product-img-wrap d-flex justify-content-center">
                                     <img class="new-product-img opacity-50" src="./img/new-clock3.png" alt="new-clock"
                                         width="215" height="234">
@@ -461,7 +466,7 @@
             <h2 class="section-title">Статті та корисна інформація</h2>
 
             <ul class="container-fluid">
-                <li class="row mb-3 colextions-wrapper ms-0">
+                <li class="row ms-0 container-fluid article">
                     <img class="col-xl-6 col-lg-4 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles1.webp"
                         alt="Articles">
                     <div
@@ -484,7 +489,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="row mb-3 colextions-wrapper ms-0">
+                <li class="row ms-0 container-fluid article">
                     <img class="col-xl-6 col-lg-4 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles2.webp"
                         alt="Articles">
                     <div
@@ -505,7 +510,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="row colextions-wrapper ms-0">
+                <li class="row ms-0 container-fluid">
                     <img class="col-xl-6 col-lg-4 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles3.webp"
                         alt="Articles">
                     <div
@@ -533,7 +538,7 @@
         <section class="containet partners">
             <h2 class="section-title">Наші партнери</h2>
             <div class="container partners-list">
-                <ul class="row justify-content-center p-0 m-0">
+                <ul class="row justify-content-center align-items-center p-0 m-0">
                     <li class="col-3 partner-logo me-4"><img src="./img/partner1.png" alt="partner logo" width="250">
                     </li>
                     <li class="col-3 partner-logo me-4"><img src="./img/partner2.png" alt="partner logo" width="250">
@@ -547,11 +552,12 @@
     </main>
 
     <footer class="footer">
-        <div class="container footer-main-wrap">
+        <div class="container-fluid footer-main-wrap">
             <div class="row">
                 <div class="col-xl-4 col-md-11 col-sm-10 offset-xl-0 offset-md-1 offset-lg-1">
                     <h3 class="footer-section-title">про компанію</h3>
-                    <p class="footer-section-text col-11">Компанія PORTEN – лідер на українському ринку годинників. На
+                    <p class="footer-section-text col-12 mb-0">Компанія PORTEN – лідер на українському ринку годинників.
+                        На
                         цей час
                         ми об'єднуємо більше сорока
                         магазинів у
@@ -569,18 +575,21 @@
                 <div class="col-xl-4 col-md-6 col-sm-12 offset-xl-0 offset-md-1 mt-md-5 mt-xl-0">
                     <div class="containet footer-categories">
                         <h3 class="footer-section-title">Категорії</h3>
-                        <ul class="row p-md-0 p-sm-3 col-12">
-                            <li class="col-lg-4 col-md-6 col-sm-3 mb-4"><a class="btn" href="">годинники</a></li>
-                            <li class="col-lg-4 col-md-6 col-sm-3 mb-4"><a class="btn" href="">запонки</a></li>
-                            <li class="col-lg-4 col-md-6 col-sm-3 mb-4"><a class="btn" href="">ремені</a></li>
-                            <div class="row col-12 pe-0">
-                                <li class="col-lg-6 col-md-6 col-sm-5 mt-6 pe-0 mb-4"><a class="btn" href="">ювелірні
-                                        вироби</a>
-                                </li>
-                                <li class="col-lg-6 col-md-6 col-sm-5 mt-6 mb-4"><a class="btn" href="">на
-                                        замовлення</a></li>
-                            </div>
-                            <li class="col-md-4"><a class="btn" href="">браслети</a></li>
+                        <ul class="container-fluid row p-md-0 p-sm-3 col-12">
+                            <li class="col-lg-4 col-md-6 col-sm-3 p-0 category"><a class="btn" href="">годинники</a>
+                            </li>
+                            <li class="col-lg-4 col-md-6 col-sm-3 p-0 category"><a class="btn" href="">запонки</a>
+                            </li>
+                            <li class="col-lg-4 col-md-6 col-sm-3 p-0 category"><a class="btn" href="">ремені</a>
+                            </li>
+
+                            <li class="col-lg-6 col-md-6 col-sm-5 mt-6 p-0 category"><a class="btn" href="">ювелірні
+                                    вироби</a>
+                            </li>
+                            <li class="col-lg-6 col-md-6 col-sm-5 mt-6 p-0 category"><a class="btn" href="">на
+                                    замовлення</a></li>
+
+                            <li class="col-md-4 p-0"><a class="btn" href="">браслети</a></li>
                         </ul>
                     </div>
                 </div>
@@ -596,16 +605,16 @@
                             обслуговування.
                         </p>
                         <input class="email-input" type="email" name="email" id="email-input" placeholder="Ваша пошта">
-                        <button type="button" class="btn mt-lg-4 mt-md-4 mt-xl-0">ПІДПИСАТИСЯ</button>
+                        <button type="button" class="btn footer-btn mt-lg-4 mt-md-4 mt-xl-0">ПІДПИСАТИСЯ</button>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="container-fluid d-inline-flex pt-3 footer-copiright">
-            <div class="container">
+            <div class="container p-0">
                 <p class="col-10">© 2022 PORTEN, Інтернет-магазин годинників</p>
-                <p class="col">Угода користувача</p>
+                <p class="col user-agreement">Угода користувача</p>
             </div>
         </div>
     </footer>
