--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <h2 class="section-title m-0">СЕЗОН 2021/22</h2>
 
                     <div class="container carousel-new-seson">
-                        <div id="carousel-new-seson" class="carousel slide" data-ride="carousel">
+                        <div id="carousel-new-seson" class="carousel slide" data-pause="false" data-ride="carousel">
                             <ol class="carousel-indicators">
                                 <li data-target="#carousel-new-seson" data-slide-to="0" class="active"></li>
                                 <li data-target="#carousel-new-seson" data-slide-to="1"></li>
